grammar.js
    document: $ => repeat($._node),

    // ==========================================================================
    // Node types
    // ==========================================================================

    _node: $ => choice(
      $._html_node,
      $._django_node,
    ),

    doctype: $ => seq(
      '<!',
      alias($._doctype, 'doctype'),
      /[^>]+/,
      '>',
    ),

    _doctype: _ => /[Dd][Oo][Cc][Tt][Yy][Pp][Ee]/,

    // ==========================================================================
    // HTML: Elements
    // ==========================================================================

    void_element: $ => seq(
      '<',
      alias($._void_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    normal_element: $ => seq(
      '<',
      alias($._html_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
      repeat($._node),
      choice($.end_tag, $._implicit_end_tag),
    ),

    // For unbalanced HTML tags inside Django conditionals
    script_element: $ => seq(
      alias($.script_start_tag, $.start_tag),
      optional(alias($._raw_text_with_django, $.raw_text)),
      $.end_tag,
    ),

    _raw_text_with_django: $ => repeat1(choice(
      $.raw_text,
      $.django_interpolation,
      $.django_line_comment,
      $.django_statement,
    )),

    style_element: $ => seq(
      alias($.style_start_tag, $.start_tag),
      optional(alias($._raw_text_with_django, $.raw_text)),
      $.end_tag,
    ),

    rcdata_element: $ => choice(
      seq(
        alias($.title_start_tag, $.start_tag),
        optional($._rcdata_with_django),
        $.end_tag,
      ),
      seq(
        alias($.textarea_start_tag, $.start_tag),
        optional($._rcdata_with_django),
        $.end_tag,
      ),
    ),

    _rcdata_with_django: $ => repeat1(choice(
      $.rcdata_text,
      $.django_interpolation,
      $.django_line_comment,
      $.django_statement,
    )),

    plaintext_element: $ => seq(
      alias($.plaintext_start_tag, $.start_tag),
      optional($.plaintext_text),
    ),

    foreign_element: $ => seq(
      '<',
      alias($._foreign_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice(
        seq('>', repeat($._node), choice($.end_tag, $._implicit_end_tag)),
        '/>',
      ),
    ),

    // ==========================================================================
    // HTML: Start/End Tags
    // ==========================================================================

    start_tag: $ => seq(
      '<',
      alias(
        choice(
          $._html_start_tag_name,
          $._void_start_tag_name,
          $._foreign_start_tag_name,
          $._script_start_tag_name,
          $._style_start_tag_name,
          $._title_start_tag_name,
          $._textarea_start_tag_name,
          $._plaintext_start_tag_name,
        ),
        $.tag_name,
      ),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    end_tag: $ => seq(
      '</',
      alias($._end_tag_name, $.tag_name),
      '>',
    ),

    erroneous_end_tag: $ => seq(
      '</',
      $.erroneous_end_tag_name,
      '>',
    ),

    // ==========================================================================
    // HTML: Attributes
    // ==========================================================================

    _attribute_node: $ => choice(
      $.attribute,
      $.django_interpolation,
      $.django_statement,
      $.django_line_comment,
    ),

    attribute: $ => seq(
      $.attribute_name,
      optional(seq(
        '=',
        choice(
          $.attribute_value,
          $.quoted_attribute_value,
        ),
      )),
    ),

    attribute_name: _ => /[^<>"'/=\s\{%]+/,

    attribute_value: $ => prec.left(repeat1(choice(
      $.entity,
      /[^<>"'=\s\{%]+/,
      $.django_interpolation,
    ))),

    quoted_attribute_value: $ => choice(
      seq(
        "'",
        repeat(choice(
          $.entity,
          alias(/[^'&\{]+/, $.attribute_value),
          // { not starting Django: optionally followed by non-Django, non-quote char and more text
          // The optional group allows lone { at end of attribute (before closing quote)
          alias(token(prec(-1, /\{([^{%#'][^'&\{]*)?/)), $.attribute_value),
          $.django_interpolation,
          $.django_statement,
        )),
        "'",
      ),
      seq(
        '"',
        repeat(choice(
          $.entity,
          alias(/[^"&\{]+/, $.attribute_value),
          // { not starting Django: optionally followed by non-Django, non-quote char and more text
          // The optional group allows lone { at end of attribute (before closing quote)
          alias(token(prec(-1, /\{([^{%#"][^"&\{]*)?/)), $.attribute_value),
          $.django_interpolation,
          $.django_statement,
        )),
        '"',
      ),
    ),

    // ==========================================================================
    // HTML: Text and Entities
    // ==========================================================================

    entity: _ => /&(#x[0-9A-Fa-f]{1,6}|#[0-9]{1,7}|[A-Za-z][A-Za-z0-9]{1,31});/,

    text: $ => prec.right(repeat1(choice(
      $.entity,
      // Single brace that's not start of Django (lookahead simulation)
      token(prec(-1, /\{/)),
      // Greater-than sign can appear in text (after comments, etc.)
      token(prec(-1, />/)),
      // Regular text excluding HTML special chars and braces
      token(/[^<>&\s\{][^<>&\{]*/),
    ))),

    // ==========================================================================
    // Django: Interpolation ({{ expression }})
    // ==========================================================================
