test/corpus/html.txt
===================================
Tags
===================================
<span>Hello</span>
---

(document
  (normal_element
    (tag_name)
    (text)
    (end_tag
      (tag_name))))

===================================
Void tag with attributes and stray end
===================================
<input value=yes class="a" data-test></input>
---

(document
  (void_element
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value))
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))
    (attribute
      (attribute_name)))
  (erroneous_end_tag
    (erroneous_end_tag_name)))

===================================
Tags with attributes
===================================
<div value=yes class="a" data-💩></div>
---

(document
  (normal_element
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value))
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))
    (attribute
      (attribute_name))
    (end_tag
      (tag_name))))

===================================
Nested tags
===================================
<div>
  <span>a</span>
  b
  <b>c</b>
  Multi-line
  text
</div>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (text)
      (end_tag
        (tag_name)))
    (text)
    (normal_element
      (tag_name)
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name))))

==================================
Nested same-type elements
==================================
<span><span><span>inner</span></span></span>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (normal_element
        (tag_name)
        (text)
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================================
Void tags
==================================
<form><img src="something.png"><br><input type=submit value=Ok /></form>
---

(document
  (normal_element
    (tag_name)
    (void_element
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (void_element
      (tag_name))
    (void_element
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value))
      (attribute
        (attribute_name)
        (attribute_value)))
    (end_tag
      (tag_name))))

==================================
Void tags at EOF
==================================
<img src="something.png">
---

(document
  (void_element
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))))

==================================
Void end tag is erroneous
==================================
<br></br>
---

(document
  (void_element
    (tag_name))
  (erroneous_end_tag
    (erroneous_end_tag_name)))

==================================
Custom tags
==================================
<something:different>
  <atom-text-editor mini>
    Hello
  </atom-text-editor>
</something:different>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (attribute
        (attribute_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================================
Comments
==================================
<!-- hello -->
<!-- world ->-> -- > ->->->-- -> still comment -->
<div>
  <!-- <span>something</span> -->
</div>
---

(document
  (comment)
  (comment)
  (normal_element
    (tag_name)
    (comment)
    (end_tag
      (tag_name))))

==================================
Comment edge cases
==================================
<!-->
<!--->
<!-- foo --!>
<!-- <!-- nested --> -->
---

(document
  (comment)
  (comment)
  (comment)
  (comment)
  (text))

==================================
Raw text elements
==================================
<script>
  </s
  </sc
  </scr
  </scri
  </scrip
</script>

<style>
  </ </s </st </sty </styl
</style>

<script>
</SCRIPT>

---

(document
  (script_element
    (start_tag
      (tag_name))
    (raw_text
      (raw_text))
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (raw_text
      (raw_text))
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (raw_text
      (raw_text))
    (end_tag
      (tag_name))))

==================================
All-caps doctype
==================================
<!DOCTYPE html PUBLIC
  "-//W3C//DTD XHTML 1.0 Transitional//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
---

(document
  (doctype
    (doctype_keyword)))

==================================
Lowercase doctype
==================================
<!doctype html>
---

(document
  (doctype
    (doctype_keyword)))

==================================
LI elements without close tags
==================================
<ul>
  <li>One
  <li>Two
</ul>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (end_tag
      (tag_name))))

======================================
DT and DL elements without close tags
======================================
<dl>
  <dt>Coffee
  <dt>Café
  <dd>Black hot drink
  <dt>Milk
  <dd>White cold drink
</dl>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (end_tag
      (tag_name))))

======================================
P elements without close tags
======================================
<p>One
<div>Two</div>
<p>Three
<p>Four
<h1>Five</h1>
---

(document
  (normal_element
    (tag_name)
    (text))
  (normal_element
    (tag_name)
    (text)
    (end_tag
      (tag_name)))
  (normal_element
    (tag_name)
    (text))
  (normal_element
    (tag_name)
    (text))
  (normal_element
    (tag_name)
    (text)
    (end_tag
      (tag_name))))

======================================
Ruby annotation elements without close tags
======================================
<ruby>東<rb>京<rt>とう<rt>きょう</ruby>
---

(document
  (normal_element
    (tag_name)
    (text)
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (normal_element
      (tag_name)
      (text))
    (end_tag
      (tag_name))))

=======================================
COLGROUP elements without end tags
=======================================
<table>
  <colgroup>
    <col style="background-color: #0f0">
    <col span="2">
  <tr>
    <th>Lime</th>
    <th>Lemon</th>
    <th>Orange</th>
  </tr>
</table>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (void_element
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value))))
      (void_element
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (normal_element
      (tag_name)
      (normal_element
        (tag_name)
        (text)
        (end_tag
          (tag_name)))
      (normal_element
        (tag_name)
        (text)
        (end_tag
          (tag_name)))
      (normal_element
        (tag_name)
        (text)
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

=========================================
TR, TD, and TH elements without end tags
=========================================
<table>
  <tr>
    <th>One
    <th>Two
  <tr>
    <td>Three
    <td>Four
</table>
---

(document
  (normal_element
    (tag_name)
    (normal_element
      (tag_name)
      (normal_element
        (tag_name)
        (text))
      (normal_element
        (tag_name)
        (text)))
    (normal_element
      (tag_name)
      (normal_element
        (tag_name)
        (text))
      (normal_element
        (tag_name)
        (text)))
    (end_tag
      (tag_name))))

==============================
Named entities in tag contents
==============================

<p>Lorem ipsum &nbsp; dolor sit &copy; amet.</p>
---

(document
  (normal_element
    (tag_name)
    (text
      (entity)
      (entity))
    (end_tag
      (tag_name))))

================================
Numeric entities in tag contents
================================

<p>Lorem ipsum &#160; dolor sit &#8212; amet.</p>
---

(document
  (normal_element
    (tag_name)
    (text
      (entity)
      (entity))
    (end_tag
      (tag_name))))

=================================
Multiple entities in tag contents
=================================

<p>Lorem ipsum &#xA0; dolor &#xa0; sit &nbsp; amet.</p>
---

(document
  (normal_element
    (tag_name)
    (text
      (entity)
      (entity)
      (entity))
    (end_tag
      (tag_name))))

==================================
Omitted end tags for html and head
==================================

<!doctype html><html><head>

---

(document
  (doctype
    (doctype_keyword))
  (normal_element
    (tag_name)
    (normal_element
      (tag_name))))

==================================
RCDATA title
==================================
<title>1 < 2</title>
---

(document
  (rcdata_element
    (start_tag
      (tag_name))
    (rcdata_text)
    (end_tag
      (tag_name))))

==================================
RCDATA textarea
==================================
<textarea><b></textarea>
---

(document
  (rcdata_element
    (start_tag
      (tag_name))
    (rcdata_text)
    (end_tag
      (tag_name))))

==================================
RCDATA entities
==================================
<title>1 < 2 &amp; 3</title>
---

(document
  (rcdata_element
    (start_tag
      (tag_name))
    (rcdata_text)
    (end_tag
      (tag_name))))

==================================
Plaintext
==================================
<plaintext><b>
---

(document
  (plaintext_element
    (start_tag
      (tag_name))
    (plaintext_text)))

==================================
Plaintext with closing tag
==================================
<plaintext><b></plaintext>
---

(document
  (plaintext_element
    (start_tag
      (tag_name))
    (plaintext_text)))

==================================
Slash-terminated HTML tag
==================================
<div/>
---

(document
  (normal_element
    (tag_name)))

==================================
HTML slash terminator
==================================
<div/>text</div>
---

(document
  (normal_element
    (tag_name)
    (text)
    (end_tag
      (tag_name))))

==================================
Foreign content self-close
==================================
<svg><path/></svg>
---

(document
  (foreign_element
    (tag_name)
    (foreign_element
      (tag_name))
    (end_tag
      (tag_name))))

==================================
Foreign case-sensitive names
==================================
<svg><linearGradient></linearGradient></svg>
---

(document
  (foreign_element
    (tag_name)
    (foreign_element
      (tag_name)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================================
Foreign content
==================================
<svg><path/><linearGradient></linearGradient></svg>
---

(document
  (foreign_element
    (tag_name)
    (foreign_element
      (tag_name))
    (foreign_element
      (tag_name)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))
